// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Step Step Completed 1`] = `
<div
  className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
>
  <div
    className="Viewweb__View-sc-1cphyjf-0 Step__StepContainer-sc-138bcnf-0 hEsXee Spaceweb__Space-njatzl-0 hvEKbL Flexweb__Flex-ni2cjg-0 hKatcF"
    onClick={[Function]}
  >
    <div
      className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 dzXWge Spaceweb__Space-njatzl-0 fIWTfg Sizeweb__Size-sc-10bl685-0 kDdxwT"
    >
      <img
        alt="completed"
        src="completed.svg"
      />
    </div>
    <div
      className="Textweb__Text-sc-6jf9e4-0 hnoxUi Flexweb__Flex-ni2cjg-0 libPPx"
      color="shade.970"
      data-testid="ds-text"
      size="medium"
    >
      Business details
    </div>
    <svg
      fill="none"
      height={16}
      viewBox="0 0 24 24"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
        fill="rgba(22, 47, 86, 0.87)"
        fillRule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Step Step Default 1`] = `
<div
  className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
>
  <div
    className="Viewweb__View-sc-1cphyjf-0 Step__StepContainer-sc-138bcnf-0 hEsXee Spaceweb__Space-njatzl-0 hvEKbL Flexweb__Flex-ni2cjg-0 hKatcF"
    onClick={[Function]}
  >
    <div
      className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 dzXWge Spaceweb__Space-njatzl-0 fIWTfg Sizeweb__Size-sc-10bl685-0 kDdxwT"
    >
      <img
        alt="pending"
        src="pending.svg"
      />
    </div>
    <div
      className="Textweb__Text-sc-6jf9e4-0 hnoxUi Flexweb__Flex-ni2cjg-0 libPPx"
      color="shade.970"
      data-testid="ds-text"
      size="medium"
    >
      Contact Details
    </div>
    <svg
      fill="none"
      height={16}
      viewBox="0 0 24 24"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
        fill="rgba(22, 47, 86, 0.87)"
        fillRule="evenodd"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Step Step Error 1`] = `
<div
  className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
>
  <div
    className="Viewweb__View-sc-1cphyjf-0 Step__StepContainer-sc-138bcnf-0 ieEyfR Spaceweb__Space-njatzl-0 hvEKbL Flexweb__Flex-ni2cjg-0 hKatcF"
    onClick={[Function]}
  >
    <div
      className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 dzXWge Spaceweb__Space-njatzl-0 fIWTfg Sizeweb__Size-sc-10bl685-0 kDdxwT"
    >
      <img
        alt="error"
        src="error.svg"
      />
    </div>
    <div
      className="Textweb__Text-sc-6jf9e4-0 hnoxUi Flexweb__Flex-ni2cjg-0 libPPx"
      color="shade.970"
      data-testid="ds-text"
      size="medium"
    >
      Business details
    </div>
    <svg
      fill="none"
      height={16}
      viewBox="0 0 24 24"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M8.29289 5.29289C8.68342 4.90237 9.31658 4.90237 9.70711 5.29289L15.7071 11.2929C16.0976 11.6834 16.0976 12.3166 15.7071 12.7071L9.70711 18.7071C9.31658 19.0976 8.68342 19.0976 8.29289 18.7071C7.90237 18.3166 7.90237 17.6834 8.29289 17.2929L13.5858 12L8.29289 6.70711C7.90237 6.31658 7.90237 5.68342 8.29289 5.29289Z"
        fill="rgba(22, 47, 86, 0.87)"
        fillRule="evenodd"
      />
    </svg>
  </div>
  <div
    className="Textweb__Text-sc-6jf9e4-0 lcSscp Spaceweb__Space-njatzl-0 leGavs"
    color="negative.900"
    data-testid="ds-text"
    size="xxsmall"
  >
    Unable to verify your pan. Please update.
  </div>
</div>
`;

exports[`Storyshots Step Step Locked 1`] = `
<div
  className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
>
  <div
    className="Viewweb__View-sc-1cphyjf-0 Step__StepContainer-sc-138bcnf-0 eYNRDE Spaceweb__Space-njatzl-0 hvEKbL Flexweb__Flex-ni2cjg-0 hKatcF"
    onClick={[Function]}
  >
    <div
      className="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 dzXWge Spaceweb__Space-njatzl-0 fIWTfg Sizeweb__Size-sc-10bl685-0 kDdxwT"
    >
      <img
        alt="locked"
        src="locked.svg"
      />
    </div>
    <div
      className="Textweb__Text-sc-6jf9e4-0 iFsPRm Flexweb__Flex-ni2cjg-0 libPPx"
      color="shade.950"
      data-testid="ds-text"
      size="medium"
    >
      Business details
    </div>
  </div>
</div>
`;
